--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2 id="display-city"></h2>
       <div class="card-head">
         <div class="card-body-header">
-          <p id="today-time">Today, Monday 2:15pm</p>
+          <p class="time-today" id="today-time">Today, Monday 2:15pm</p>
           <div class="weather-today">
             <span class="temperature" id="temperature">
             </span>°F
