Added GitHub Repository link to project

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         </div>
       </div>
     </div>
+    <a class="github-link" href="https://github.com/mtskinner915/SheCodes-Project-Week6-MTS">Margaret's Project xGitHub Repository</a>
     <script src="src/index.js"></script>
   </body>
 </html>
